added getHistorical data api
